--- a/config.yml
+++ b/config.yml
@@ -75,7 +75,7 @@
 
 
 meta:
-  author: Daniel Buce
+  author: Daniel Bruce
   homepage: http://www.entypo.com
   email: daniel@precinct.net
   twitter: http://twitter.com/danielbruce_
